--- a/src/app/activities/deals/deals.page.html
+++ b/src/app/activities/deals/deals.page.html
@@ -1,30 +1,38 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button  defaultHref="/home"></ion-back-button>
+      <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
-    <ion-title>Deals</ion-title>
+    <ion-row>
+      <ion-col style="margin: auto;">
+        <ion-title>Deals</ion-title>
+      </ion-col>
+      <ion-col style="text-align: right;">
+        <ion-button class="btn-background-color" (click)="addDeals('0')" size="small">Add</ion-button>
+      </ion-col>
+    </ion-row>
+
   </ion-toolbar>
 </ion-header>
-
-<ion-content>  
-  <ion-card class="shadow-all" *ngFor="let item of dummyresponse">
+<ion-content>
+  <ion-card class="shadow-all" *ngFor="let item of dealsData">
     <ion-grid>
       <ion-row>
         <ion-col size="9">
-          <ion-card-content>                 
+          <ion-card-content>
             <p>
               Deal Name: {{item?.dealName}}
             </p>
             <p>
-              Client Name: {{item?.clientName}}            </p>
+              Client Name: {{item?.clientName}} </p>
             <p>
               phone: {{item?.phone}}
             </p>
           </ion-card-content>
         </ion-col>
         <ion-col size="3" class="ion-text-right ion-align-self-center">
-          <ion-icon name="pencil" color="primary" size="small" ></ion-icon>
+          <ion-icon (click)="edit(item.id)" name="pencil" color="primary" size="small"></ion-icon><br>
+          <ion-icon (click)="delete(item.id)" name="trash" color="danger" size="small"></ion-icon>          
         </ion-col>
       </ion-row>
     </ion-grid>
