prime site visist changes

--- a/src/app/activities/deals/deals.page.html
+++ b/src/app/activities/deals/deals.page.html
@@ -15,7 +15,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-card class="shadow-all" *ngFor="let item of dealsData">
+  <ion-card class="shadow-all card-background" *ngFor="let item of dealsData">
     <ion-grid>
       <ion-row>
         <ion-col size="9">
