--- a/src/app/activities/deals/deals.page.scss
+++ b/src/app/activities/deals/deals.page.scss
@@ -1,3 +1,7 @@
 .shadow-all {
     box-shadow: rgba(54, 138, 192, 0.3) 0 0 3px 3px;
   }
+  .card-background {
+    background: linear-gradient(87deg, #f5365c 0, #f56036 100%) !important;
+      color: white;
+  }
