--- a/src/app/interactions/prime-site-visits/prime-site-visits.page.scss
+++ b/src/app/interactions/prime-site-visits/prime-site-visits.page.scss
@@ -21,3 +21,7 @@ ion-card {
   .ion-padding{
       padding: 4px;
   }
+  .card-background {
+    background: linear-gradient(87deg, #f5365c 0, #f56036 100%) !important;
+      color: white;
+  }
