--- a/src/app/interactions/prime-site-visits/view-prime-sites/view-prime-sites.page.html
+++ b/src/app/interactions/prime-site-visits/view-prime-sites/view-prime-sites.page.html
@@ -13,17 +13,17 @@
       <ion-row>
         <ion-col size="9">
           <ion-card-content>
-            <h2>Mj Lake view</h2>
+            <h2>{{siteData?.propertyName}}</h2>
             <p>
-              Test
+              {{siteData?.date}}
             </p>
             <p>
-              Client Name: Abode
+              Client Name: {{siteData?.clientName}}
             </p>
             <p>
-              ID: 234324 </p>
+              ID: {{siteData?.id}} </p>
             <p>
-              Mobile: 8877878787
+              Mobile: {{siteData?.mobile}}
             </p>
           </ion-card-content>
         </ion-col>
@@ -41,7 +41,7 @@
       <ion-button (click)="getCurrentLocation()">Logout Location</ion-button>
     </ion-col>
   </ion-row>
-  <ion-row>
+  <!-- <ion-row>
     <ion-col>
       <ion-label>
         Latitude: {{latitude?latitude: ''}}
@@ -52,5 +52,37 @@
         Longitude: {{longitude? longitude: ''}}
       </ion-label>
     </ion-col>
-  </ion-row>
+  </ion-row> -->
+  <ion-card>  
+    <ion-row>
+      <ion-col size="8">
+        <ion-list>
+          <ion-item>
+            <ion-select  [(ngModel)]="selectedLead" label="Lead"  label-placement="floating">
+              <ion-select-option *ngFor="let items of leadsData"
+                [value]="items.id">{{items.firstName}}-({{items.mobile}})</ion-select-option>
+            </ion-select>
+          </ion-item>         
+        </ion-list>  
+      </ion-col>
+      <ion-col size="4" style="margin: auto;">
+        <ion-button [disabled]="selectedLead ==''" expand="block" class="btn-background-color" 
+        size="small" (click)="generateOtp()" >Get OTP</ion-button>    
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="otpgenerated">
+      <ion-col size="8">
+        <ion-list>
+          <ion-item>
+            <ion-input label="Enter OTP" [(ngModel)]="enteredOtp" maxlength="6"  labelPlacement="floating"></ion-input>
+          </ion-item>         
+        </ion-list>  
+      </ion-col>
+      <ion-col size="4" style="margin: auto;">
+        <ion-button (click)="verifyOtp()"   [disabled]="enteredOtp ==''"  expand="block" class="btn-background-color-green" 
+        size="small">Verify</ion-button>    
+      </ion-col>
+    </ion-row>
+    
+  </ion-card>
 </ion-content>
